# BuildWorld

./: .gitignore  CLAUDE.md  DEPLOY.md  settings.json  world-status.json
.Codex/: handoff.json
.Codex/cycles/cycle-020/: code-review.md  cycle-report.md
.Codex/cycles/cycle-021/: code-review.md  cycle-report.md
.Codex/cycles/cycle-022/: code-review.md  cycle-report.md  launch-copy.md
.Codex/cycles/cycle-023/: code-review.md  cycle-report.md
.Codex/cycles/cycle-024/: code-review.md  cycle-report.md
.Codex/logs/: build-log.md
.Codex/memory/: benchmark-suite.md  microcore-deep-research-protocol.md  product-registry.md
.Codex/revenue/: revenue-log.md
.Codex/trigger-prompts/: buildworld-cycles.md
products/agent-patrol/: .gitignore  README.md  pyproject.toml
products/agent-patrol/.github/workflows/: publish.yml
products/agent-patrol/agent_patrol/: __init__.py
products/agent-patrol/tests/: test_agent_patrol.py
products/context-trace/: README.md  pyproject.toml
products/context-trace/.github/workflows/: publish.yml
products/context-trace/context_trace/: __init__.py  cli.py  embedder.py  gate.py  pytest_plugin.py  runners.py  store.py  tracer.py
products/context-trace/tests/: conftest.py  test_cli.py  test_embedder.py  test_gate.py  test_store.py  test_tracer.py
products/context-trim/: README.md  pyproject.toml
products/context-trim/.github/workflows/: publish.yml
products/context-trim/context_trim/: __init__.py  cli.py  core.py  store.py
products/context-trim/examples/: basic_usage.py
products/context-trim/tests/: test_cli.py  test_context_trim_api.py  test_document_trimmer.py  test_importance_scorer.py  test_message_trimmer.py  test_token_budget.py  test_trim_store.py
products/cot-coherence/: .cot-coherence.db  README.md  pyproject.toml
products/cot-coherence/.github/workflows/: publish.yml
products/cot-coherence/cot_coherence/: __init__.py
products/cot-coherence/tests/: test_cot_coherence.py
products/cot-fidelity/: pyproject.toml
products/cot-fidelity/.github/workflows/: publish.yml
products/cot-fidelity/cot_fidelity/: __init__.py  cli.py  decorators.py  engine.py  models.py  runner.py  store.py
products/cot-fidelity/tests/: test_cli.py  test_decorators.py  test_engine.py  test_models.py  test_runner.py  test_store.py
products/drift-guard/: .gitignore  README.md  pyproject.toml
products/drift-guard/.github/workflows/: ci.yml  publish.yml
products/drift-guard/drift_guard/: __init__.py
products/drift-guard/tests/: test_drift_guard.py
products/livelock-probe/: README.md  pyproject.toml
products/livelock-probe/.github/workflows/: publish.yml
products/livelock-probe/livelock_probe/: __init__.py  cli.py  decorator.py  engine.py  models.py  pytest_plugin.py  suite.py
products/livelock-probe/tests/: test_decorator.py  test_engine.py  test_integration.py  test_models.py  test_pytest_plugin.py  test_suite.py
products/llm-contract/: .gitignore  README.md  llm_contract_logs.db  pyproject.toml
products/llm-contract/.github/workflows/: ci.yml  publish.yml
products/llm-contract/llm_contract/: __init__.py  cli.py  config.py  contract.py  judge.py  models.py  storage.py
products/llm-contract/tests/: conftest.py  test_contract.py  test_judge.py  test_models.py  test_storage.py
products/llm-mutation/: pyproject.toml
products/llm-mutation/.github/workflows/: publish.yml
products/model-parity/: .gitignore  README.md  pyproject.toml
products/model-parity/.github/workflows/: ci.yml  publish.yml
products/model-parity/model_parity/: __init__.py
products/model-parity/tests/: test_model_parity.py
products/pressure-gauge/: README.md  pyproject.toml
products/pressure-gauge/.github/workflows/: publish.yml
products/pressure-gauge/pressure_gauge/: __init__.py  cli.py  decorator.py  engine.py  gauge.py  models.py  pytest_plugin.py
products/pressure-gauge/tests/: conftest.py  test_decorator.py  test_engine.py  test_gauge.py  test_integration.py  test_models.py  test_pytest_plugin.py
products/prompt-lock/: .gitignore  README.md  action.yml  pyproject.toml
products/prompt-lock/.github/workflows/: ci.yml  publish.yml
products/prompt-lock/src/prompt_lock/: __init__.py  cli.py  config.py  detector.py  gate.py  runner.py  tracer.py
products/prompt-lock/src/prompt_lock/judge/: __init__.py  calibrate.py  llm.py
products/prompt-lock/tests/: test_config.py  test_gate.py  test_runner.py  test_tracer.py
products/semantic-pass-k/: README.md  pyproject.toml
products/semantic-pass-k/.github/workflows/: publish.yml
products/semantic-pass-k/examples/: basic_usage.py
products/semantic-pass-k/semantic_pass_k/: __init__.py  cli.py  config.py  decorators.py  engine.py  models.py  pytest_plugin.py  runner.py  store.py
products/semantic-pass-k/tests/: test_cli.py  test_config.py  test_decorators.py  test_engine.py  test_models.py  test_pytest_plugin.py  test_runner.py  test_store.py
products/spec-drift/: .gitignore  pyproject.toml
products/spec-drift/.github/workflows/: ci.yml  publish.yml
products/spec-drift/spec_drift/: __init__.py
products/spec-drift/tests/: test_spec_drift.py
