[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-patrol"
version = "0.1.0"
description = "Runtime pathology detection for AI agents. Diagnoses loops, stalls, oscillation, drift, and silent abandonment."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Richmond Owusu Duah", email = "Rowusuduah@users.noreply.github.com" }
]
keywords = [
    "ai", "agent", "llm", "pathology", "debugging", "monitoring",
    "observability", "loop-detection", "drift", "orchestration"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[project.scripts]
agent-patrol = "agent_patrol:_cli_main"

[project.urls]
Homepage = "https://github.com/Rowusuduah/agent-patrol"
Repository = "https://github.com/Rowusuduah/agent-patrol"
Issues = "https://github.com/Rowusuduah/agent-patrol/issues"

[tool.hatch.build.targets.wheel]
packages = ["agent_patrol"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
