[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cot-coherence"
version = "0.1.0"
description = "Verify that your LLM's chain-of-thought reasoning is internally coherent. CI gate. 5 dimensions. SQLite trace log."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "BuildWorld", email = "build@buildworld.dev" }
]
keywords = [
    "ai", "llm", "chain-of-thought", "reasoning", "coherence",
    "evaluation", "ci-cd", "anthropic", "verification", "cot"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pyyaml>=6.0",
    "black",
    "ruff",
]

[project.scripts]
cot-coherence = "cot_coherence:_cli_main"

[project.urls]
Homepage = "https://github.com/buildworld-ai/cot-coherence"
Repository = "https://github.com/buildworld-ai/cot-coherence"
Issues = "https://github.com/buildworld-ai/cot-coherence/issues"

[tool.hatch.build.targets.wheel]
packages = ["cot_coherence"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
