[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cot-fidelity"
version = "0.1.0"
description = "Measure whether your LLM's reasoning chain actually caused its output — counterfactual suppression test for CoT faithfulness"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Richmond Owusu Duah", email = "Rowusuduah@users.noreply.github.com" }
]
keywords = [
    "llm", "chain-of-thought", "faithfulness", "reasoning", "counterfactual",
    "ai", "evaluation", "testing", "cot", "interpretability"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
neural = [
    "sentence-transformers>=2.7.0",
]
cli = [
    "click>=8.1.0",
]
full = [
    "sentence-transformers>=2.7.0",
    "click>=8.1.0",
]
dev = [
    "pytest>=7.0.0",
    "click>=8.1.0",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/Rowusuduah/BuildWorld/tree/master/products/cot-fidelity"
"Bug Tracker" = "https://github.com/Rowusuduah/BuildWorld/issues"

[project.scripts]
cot-fidelity = "cot_fidelity.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["cot_fidelity"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
