[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livelock-probe"
version = "0.1.0"
description = "Detect when an AI agent is making zero net progress toward its goal. The first pip-installable LivelockScore for AI agents."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "BuildWorld", email = "build@buildworld.ai"}]
keywords = [
    "llm", "ai", "agents", "livelock", "stuck-state", "testing",
    "evaluation", "reliability", "ci", "monitoring", "progress",
    "langchain", "crewai", "autogen", "anthropic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
neural = ["sentence-transformers>=3.0"]
cli = ["click>=8.0", "rich>=13.0"]
full = ["sentence-transformers>=3.0", "click>=8.0", "rich>=13.0"]
dev = [
    "pytest>=7.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
lprobe = "livelock_probe.cli:cli"

[project.entry-points."pytest11"]
livelock_probe = "livelock_probe.pytest_plugin"

[project.urls]
Homepage = "https://github.com/buildworld-ai/livelock-probe"
Repository = "https://github.com/buildworld-ai/livelock-probe"
Issues = "https://github.com/buildworld-ai/livelock-probe/issues"

[tool.hatch.build.targets.wheel]
packages = ["livelock_probe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
