[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-contract"
version = "0.1.0"
description = "Define, version, and enforce behavioral contracts on LLM function calls"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "BuildWorld", email = "build@buildworld.ai" },
]
keywords = [
    "llm", "testing", "contracts", "behavioral", "validation",
    "ai", "evaluation", "drift", "ci", "pydantic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Minimal core — only pydantic required; LLM providers are extras
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.49.0"]
openai = ["openai>=1.0.0"]
cli = ["click>=8.0"]
all = [
    "anthropic>=0.49.0",
    "openai>=1.0.0",
    "click>=8.0",
]
dev = [
    "anthropic>=0.49.0",
    "openai>=1.0.0",
    "click>=8.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[project.scripts]
llm-contract = "llm_contract.cli:main"

[project.urls]
Homepage = "https://github.com/Rowusuduah/llm-contract"
Repository = "https://github.com/Rowusuduah/llm-contract"
Issues = "https://github.com/Rowusuduah/llm-contract/issues"
Changelog = "https://github.com/Rowusuduah/llm-contract/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = ["llm_contract/", "tests/", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["llm_contract"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["llm_contract"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
