[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-parity"
version = "0.1.0"
description = "Certify your replacement LLM is behaviorally equivalent before you migrate. 7 dimensions. YAML test suites. Parity certificate. CI gate."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "BuildWorld", email = "build@buildworld.dev" }
]
keywords = [
    "ai", "llm", "model-migration", "behavioral-testing", "parity",
    "ci-cd", "evaluation", "anthropic", "openai", "certification"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0.0"]
all = ["anthropic>=0.40.0", "openai>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "black",
    "ruff",
]

[project.scripts]
parity = "model_parity:_cli_main"

[project.urls]
Homepage = "https://github.com/buildworld-ai/model-parity"
Repository = "https://github.com/buildworld-ai/model-parity"
Issues = "https://github.com/buildworld-ai/model-parity/issues"

[tool.hatch.build.targets.wheel]
packages = ["model_parity"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
