[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-pass-k"
version = "0.1.0"
description = "Semantic consistency testing for AI agents — run k times, measure if outputs are equivalent, CI gate with criticality tiers."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "BuildWorld", email = "build@buildworld.ai"}]
keywords = [
    "llm", "ai", "agents", "consistency", "testing", "evaluation",
    "semantic", "pass@k", "reliability", "ci", "benchmarking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
neural = ["sentence-transformers>=2.2"]
cli = ["click>=8.0", "rich>=13.0"]
full = ["sentence-transformers>=2.2", "click>=8.0", "rich>=13.0"]
dev = [
    "pytest>=7.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
sempass = "semantic_pass_k.cli:cli"

[project.entry-points."pytest11"]
semantic_pass_k = "semantic_pass_k.pytest_plugin"

[project.urls]
Homepage = "https://github.com/buildworld-ai/semantic-pass-k"
Repository = "https://github.com/buildworld-ai/semantic-pass-k"
Issues = "https://github.com/buildworld-ai/semantic-pass-k/issues"

[tool.hatch.build.targets.wheel]
packages = ["semantic_pass_k"]

[tool.pytest.ini_options]
testpaths = ["tests"]
