[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec-drift"
version = "0.1.0"
description = "Semantic specification drift detector for LLM outputs — catches semantic violations Pydantic cannot see."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "BuildWorld", email = "build@buildworld.dev" }
]
keywords = [
    "ai", "llm", "pydantic", "semantic", "drift", "monitoring",
    "specification", "compliance", "ci-cd", "quality"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]

[project.scripts]
spec-drift = "spec_drift:main"

[project.urls]
Homepage = "https://github.com/buildworld-ai/spec-drift"
Repository = "https://github.com/buildworld-ai/spec-drift"
Issues = "https://github.com/buildworld-ai/spec-drift/issues"

[tool.hatch.build.targets.wheel]
packages = ["spec_drift"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
